--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -70,8 +70,8 @@ jobs:
         print("Generated 100 images in the ./cache folder")
         EOF
 
-    - name: Upload Cache
-      uses: actions/upload-artifact@v4.4.3
+    - name: Upload to GitHub Cache
+      uses: actions/cache@v3
       with:
-        name: shared-cache
         path: cache
+        key: bingo-images-cache
