Automation Setup Fix #7

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,23 +36,20 @@ jobs:
           echo "Released $image"
         done
 
-    - name: Compress Release Folder
-      run: zip -r release.zip release
-
-    - name: Upload Release Images
-      uses: actions/upload-release-asset@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: release.zip
-        asset_name: bingo_images_${{ github.run_number }}.zip
-        asset_content_type: application/zip
+    - name: Upload Each Image
+      run: |
+        for file in release/*; do
+          echo "Uploading $file"
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Content-Type: image/png" \
+            --data-binary @"$file" \
+            ${{ steps.create_release.outputs.upload_url }}?name=$(basename $file)
+        done
 
     - name: Clean Up
       run: |
         rm -rf release
-        rm -f release.zip
         if [ "$(ls -A cache)" ]; then
           echo "Cache still has images."
         else
