--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -45,7 +45,7 @@ jobs:
             -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
             -H "Content-Type: application/octet-stream" \
             --data-binary @"$file" \
-            "${{ steps.create_release.outputs.upload_url }}?name=$(basename $file)"
+            "${{ steps.create_release.outputs.upload_url }}&name=$(basename $file)"
         done
 
     - name: Clean Up
