--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -33,7 +33,8 @@ jobs:
         images=$(ls cache | head -n 2) # Select the first 2 images
         for image in $images; do
           mv "cache/$image" "release/$image"
-          echo "Prepared $image for upload"
+          rm "cache/$image" # Delete the released image from cache
+          echo "Prepared and deleted $image for upload"
         done
 
     - name: Upload Each Image
@@ -50,11 +51,15 @@ jobs:
             "$FINAL_URL"
         done
 
-    - name: Clean Up
+    - name: Clean Up and Re-trigger Generate Workflow if Cache is Empty
       run: |
         rm -rf release
         if [ "$(ls -A cache)" ]; then
           echo "Cache still has images."
         else
           echo "Cache is empty. Triggering regeneration workflow..."
-        fi
+          curl -X POST \
+            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+            -H "Accept: application/vnd.github+json" \
+            https://api.github.com/repos/${{ github.repository }}/actions/workflows/generate.yml/dispatches \
+            -d '{"ref": "main"}'
