--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,7 +19,11 @@ jobs:
     - name: Debug Cache Contents
       run: |
         echo "Listing cache contents:"
-        ls -l cache || echo "Cache directory is empty or missing."
+        if [ -d cache ]; then
+          ls -l cache
+        else
+          echo "Cache directory is missing or empty."
+        fi
 
     - name: Create Release
       id: create_release
@@ -36,35 +40,44 @@ jobs:
       run: |
         mkdir -p release
         echo "Processing images from cache..."
-        images=$(ls cache 2>/dev/null | head -n 2) || true
-        if [ -z "$images" ]; then
-          echo "No images found in cache. Skipping release."
+        if [ -d cache ]; then
+          images=$(ls cache | head -n 2)
+          if [ -z "$images" ]; then
+            echo "No images found in cache. Skipping release."
+            exit 0
+          fi
+          for image in $images; do
+            if [ -f "cache/$image" ]; then
+              echo "Moving $image to release/"
+              mv "cache/$image" "release/$image"
+              echo "Deleting $image from cache/"
+              rm -f "cache/$image" || echo "Warning: Could not delete cache/$image."
+            else
+              echo "Warning: File cache/$image does not exist. Skipping."
+            fi
+          done
+        else
+          echo "Cache directory is missing or empty. Exiting."
           exit 0
         fi
-        for image in $images; do
-          if [ -f "cache/$image" ]; then
-            echo "Moving $image to release/"
-            mv "cache/$image" "release/$image"
-            echo "Deleting $image from cache/"
-            rm -f "cache/$image" || echo "Warning: Could not delete cache/$image."
-          else
-            echo "Warning: File cache/$image does not exist. Skipping."
-          fi
-        done
 
     - name: Upload Each Image
       run: |
-        for file in release/*; do
-          echo "Uploading $file"
-          UPLOAD_URL="${{ steps.create_release.outputs.upload_url }}"
-          FINAL_URL="${UPLOAD_URL%\{?name,label\}}?name=$(basename $file)"
-          curl \
-            -X POST \
-            -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
-            -H "Content-Type: application/octet-stream" \
-            --data-binary @"$file" \
-            "$FINAL_URL"
-        done
+        if [ "$(ls -A release)" ]; then
+          for file in release/*; do
+            echo "Uploading $file"
+            UPLOAD_URL="${{ steps.create_release.outputs.upload_url }}"
+            FINAL_URL="${UPLOAD_URL%\{?name,label\}}?name=$(basename $file)"
+            curl \
+              -X POST \
+              -H "Authorization: Bearer ${{ secrets.GITHUB_TOKEN }}" \
+              -H "Content-Type: application/octet-stream" \
+              --data-binary @"$file" \
+              "$FINAL_URL"
+          done
+        else
+          echo "No files to upload."
+        fi
 
     - name: Clean Up and Re-trigger Generate Workflow if Cache is Empty
       run: |
