--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -51,7 +51,12 @@ jobs:
               echo "Moving $image to release/"
               mv "cache/$image" "release/$image"
               echo "Deleting $image from cache/"
-              rm -f "cache/$image" || echo "Warning: Could not delete cache/$image."
+              rm -f "cache/$image"
+              if [ ! -f "cache/$image" ]; then
+                echo "Successfully deleted $image from cache."
+              else
+                echo "Failed to delete $image from cache."
+              fi
             else
               echo "Warning: File cache/$image does not exist. Skipping."
             fi
@@ -78,6 +83,12 @@ jobs:
         else
           echo "No files to upload."
         fi
+
+    - name: Update Cache
+      uses: actions/cache@v3
+      with:
+        path: cache
+        key: bingo-images-cache
 
     - name: Clean Up and Re-trigger Generate Workflow if Cache is Empty
       run: |
